--- a/pifan.service
+++ b/pifan.service
@@ -7,6 +7,6 @@ Type=simple
 Restart=always
 User=root
 ExecStart= python3 /opt/pifan/pifan.py
-ExecStop=kill -SIGINT $(ps aux | grep -m 1 'python3 /opt/pifan/pifan.py' | awk '{ print $2 }')
+ExecStop=kill $(ps aux | grep -m 1 'python3 /opt/pifan/pifan.py' | awk '{ print $2 }')
 [Install]
 WantedBy=multi-user.target
